--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tutorifull",
   "version": "0.1.0",
+  "private": true,
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^3.0.4",
