--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-delete-original": "^0.2.2",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-uglify": "^1.5.4"
   }
