--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.1.2",
     "gulp-rev-delete-original": "^0.2.2",
-    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4"
   }
 }
