--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-Flask==0.10.1
-Flask-AssetRev==1.0.0
-Jinja2==2.8
-MarkupSafe==0.23
-SQLAlchemy==1.0.9
-WTForms==2.0.2
-Werkzeug==0.11.2
-argparse==1.2.1
-beautifulsoup4==4.4.1
+appdirs==1.4.2
+beautifulsoup4==4.5.3
 blinker==1.4
+click==6.7
 contextlib2==0.5.4
+Flask==0.12
+Flask-AssetRev==1.0.0
 itsdangerous==0.24
-psycopg2==2.6.1
-raven==5.32.0
+Jinja2==2.9.5
+MarkupSafe==0.23
+packaging==16.8
+psycopg2==2.6.2
+pyparsing==2.1.10
+raven==6.0.0
 redis==2.10.5
-requests==2.9.1
-wsgiref==0.1.2
+requests==2.13.0
+six==1.10.0
+SQLAlchemy==1.1.5
+Werkzeug==0.11.15
+WTForms==2.1
